[issue-44]: Some more modification to generate the code from the circuit in the frontend itself. 	    Also changes the positioning of various divs from "fixed" to "relative" 	    Used monospace font for generated code, "monospace" font style was set in "tabstyle.css" 	    the generated code is visible in "QuTiP code" tab

--- a/frontend/css/grid.css
+++ b/frontend/css/grid.css
@@ -31,7 +31,7 @@ table{
 			width: 50;
 			height: 1000;
 			border : solid black 1px;
-			position: fixed;
+			//position: fixed;
 		}
 
 		#toolboxDivMultiple{
@@ -39,7 +39,7 @@ table{
 			height: 1000;
 			left: 60;
 			border : solid black 1px;
-			position: fixed;
+			//position: fixed;
 		}
 
 		.toolboxcc{
@@ -52,5 +52,5 @@ table{
 		#dropzoneDiv{
 			left: 100;
 			top: 60;
-			position: fixed;
+			//position: fixed;
 		}
