--- a/frontend/css/tabstyle.css
+++ b/frontend/css/tabstyle.css
@@ -38,3 +38,7 @@ body {font-family: Arial;}
   border-top: none;
 }
 
+.monospace {
+  font-family: monospace;
+}
+
